@@ -1,0 +1,41 @@
+ 0: <span class='mkb-mkbComment def-Comment def-Syntax'>#!/usr/bin/env mkb</span>
+ 1: <span class='mkb-mkbWord def-Keyword'>files</span>
+ 2: <span class='mkb-mkbSymb def-Symbol'>{</span>
+ 3:     <span class='mkb-mkbSymb def-Symbol'>(</span>source<span class='mkb-mkbSymb def-Symbol'>)</span>
+ 4:     IwAnimOffset.cpp
+ 5: 
+ 6:     <span class='mkb-mkbComment def-Comment def-Syntax'># Provide access to resource objects via IDE</span>
+ 7:     <span class='mkb-mkbSymb def-Symbol'>[</span>Resources<span class='mkb-mkbSymb def-Symbol'>]</span>
+ 8:     <span class='mkb-mkbSymb def-Symbol'>(</span>data<span class='mkb-mkbSymb def-Symbol'>)</span>
+ 9:     IwAnimOffset.group
+10: 
+11:     <span class='mkb-mkbSymb def-Symbol'>(</span>data/combatEva/models<span class='mkb-mkbSymb def-Symbol'>)</span>
+12:     combatEva.geo
+13:     combatEva_rig.skel
+14:     combatEva.skin
+15: 
+16:     <span class='mkb-mkbSymb def-Symbol'>(</span>data/fixed<span class='mkb-mkbSymb def-Symbol'>)</span>
+17:     SingleBone.skel
+18: 
+19:     <span class='mkb-mkbSymb def-Symbol'>(</span>data/combatEva/anims<span class='mkb-mkbSymb def-Symbol'>)</span>
+20:     offset_LfStance.anim
+21:     offset_LfStance_offset.anim
+22: <span class='mkb-mkbSymb def-Symbol'>}</span>
+23: 
+24: <span class='mkb-mkbWord def-Keyword'>assets</span>
+25: <span class='mkb-mkbSymb def-Symbol'>{</span>
+26:     <span class='mkb-mkbSymb def-Symbol'>(</span>data<span class='mkb-mkbSymb def-Symbol'>)</span>
+27:     IwAnimOffset.group.bin
+28:     logo.raw
+29:      splash.jpg
+30: <span class='mkb-mkbSymb def-Symbol'>}</span>
+31: 
+32: <span class='mkb-mkbWord def-Keyword'>subprojects</span>
+33: <span class='mkb-mkbSymb def-Symbol'>{</span>
+34:     iwgx
+35:     iwgeom
+36:     iwgraphics
+37:     iwanim
+38:     ../ExamplesCore
+39: <span class='mkb-mkbSymb def-Symbol'>}</span>
+40: 
